# orogene

./: .all-contributorsrc  .gitignore  .gitmodules  BENCHMARKS.html  BENCHMARKS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.html  CONTRIBUTING.md  CROSS_LICENSE.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE.md  LICENSE-PARITY.md  LICENSE.md  MEMBERS.md  Makefile.toml  README.md  README.tpl  WORKSPACE_README.tpl  artifacts.html  artifacts.js  artifacts.json  build.rs  changelog.html  cliff.toml  index.html  oranda-v0.4.1.css  oranda.css  oranda.json  oro-manifest.rc  oro.manifest  orogene-installer.ps1.txt  orogene-installer.sh.txt  orogene-v0.3.23-installer.ps1.txt  orogene-v0.3.23-installer.sh.txt  release.toml
antimony/src-tauri/: Cargo.toml  tauri.conf.json
antimony/src-tauri/src/: build.rs  cmd.rs  main.rs
commands/cmd-ping/: Cargo.toml
commands/cmd-ping/src/: lib.rs
commands/cmd-prime/: Cargo.toml
commands/cmd-prime/src/: lib.rs
commands/cmd-resolve/: Cargo.toml
commands/cmd-resolve/src/: lib.rs
commands/cmd-restore/: Cargo.toml
commands/cmd-restore/src/: lib.rs
commands/cmd-shell/: Cargo.toml
commands/cmd-shell/src/: lib.rs
commands/cmd-view/: Cargo.toml
commands/cmd-view/src/: lib.rs
commands/oro-cmd-view/: Cargo.toml
commands/oro-cmd-view/src/: lib.rs
crates/alabaster/: Cargo.toml  build.rs  build_macos.rs
crates/alabaster/src/: error.rs  lib.rs
crates/alabaster/src/macos/: bridge.rs  mod.rs
crates/alabaster/src/macos/alabaster-swift/: Package.swift
crates/alabaster/src/macos/alabaster-swift/Sources/alabaster-swift/: AlabasterSwift.entitlements  (+6 more)
crates/cacache/: .clog.toml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE.md  LICENSE-PARITY.md  LICENSE-PATRON.md  LICENSE.md  README.md
crates/cacache/.github/: FUNDING.yml
crates/cacache/.github/workflows/: ci.yml
crates/cacache/benches/: benchmarks.rs
crates/cacache/src/: errors.rs  get.rs  index.rs  lib.rs  ls.rs  put.rs  rm.rs
crates/cacache/src/content/: mod.rs  path.rs  read.rs  rm.rs  write.rs
crates/nassun/: Cargo.toml  README.md
crates/nassun/src/: cache.rs  client.rs  entries.rs  error.rs  lib.rs  nassun.rs  package.rs  request.rs  resolver.rs  tarball.rs  wasm.rs
crates/nassun/src/fetch/: dir.rs  dummy.rs  git.rs  mod.rs  npm.rs
crates/node-maintainer/: Cargo.toml  README.md
crates/node-maintainer/src/: assignment.rs  edge.rs  error.rs  graph.rs  incompat.rs  into_kdl.rs  lib.rs  lockfile.rs  maintainer.rs  node.rs  optimizer.rs  partial_solution.rs  resolved_tree.rs  resolver.rs  term.rs  wasm.rs
crates/node-maintainer/src/linkers/: hoisted.rs  isolated.rs  mod.rs
crates/node-maintainer/src/pubgrub/: assignment.rs  partial_solution.rs  set_relation.rs  term.rs
crates/node-maintainer/tests/: general.rs  resolver_basic.rs
crates/obelisk/: Cargo.toml  README.md  build.rs  node.cpp  package-lock.json  package.json  prepare.js
crates/obelisk/fixtures/: test.js
crates/obelisk/node_c_api/: node_c_api.cc  node_ext_api.cc  node_ext_api.h
crates/obelisk/src/: bin.rs  lib.rs
crates/oro-classic-resolver/: Cargo.toml
crates/oro-classic-resolver/src/: lib.rs
crates/oro-client/: Cargo.toml  README.md
crates/oro-client/src/: auth_middleware.rs  authentication_helper.rs  client.rs  credentials.rs  error.rs  http_client.rs  lib.rs  notify.rs  traits.rs
crates/oro-client/src/api/: login.rs  logout.rs  mod.rs  packument.rs  ping.rs  publish.rs  stream_external.rs
crates/oro-client/src/http_client/: mod.rs  tcp.rs  tls.rs
crates/oro-command/: Cargo.toml
crates/oro-command/src/: lib.rs
crates/oro-common/: Cargo.toml  README.md
crates/oro-common/src/: build_manifest.rs  lib.rs  manifest.rs  packument.rs
crates/oro-config/: Cargo.toml  README.md
crates/oro-config-derive/: Cargo.toml  README.md
crates/oro-config-derive/src/: config_layer.rs  lib.rs
crates/oro-config/src/: error.rs  kdl_source.rs  lib.rs
crates/oro-manifest/: Cargo.toml
crates/oro-manifest/src/: error.rs  lib.rs
crates/oro-node-semver/: Cargo.toml  README.md
crates/oro-node-semver/src/: lib.rs  version_req.rs
crates/oro-npm-account/: Cargo.toml  README.md
crates/oro-npm-account/src/: config.rs  error.rs  lib.rs  login.rs
crates/oro-npm-publish/: Cargo.toml  README.md
crates/oro-npm-publish/src/: error.rs  lib.rs  publish.rs
crates/oro-pack/: Cargo.toml
crates/oro-pack/fixtures/explicit_files/: package.json
crates/oro-pack/fixtures/implicit_files/: package.json
crates/oro-pack/src/: lib.rs
crates/oro-pack/tests/: allow.rs  always-included-files.rs  always-included-not-dirs.rs  can-include-cruft.rs  cannot-ignore-package-json.rs  cannot-ignore-readme.rs  cruft.rs  default-ignore-cruft.rs  explicit.rs  gitignore-with-files.rs  gitignore.rs  ignore-node-modules.rs  implicit.rs  no-package-json.rs  outputs-archive.rs  package-json-empty-files.rs  package-json-empty.rs  package-json-files-glob.rs  package-json-has-files.rs  package-json-has-no-files.rs  prefer_files.rs
crates/oro-package-json/: Cargo.toml  README.md
crates/oro-package-json/src/: error.rs  lib.rs  normalize.rs
crates/oro-package-spec/: Cargo.toml  README.md
crates/oro-package-spec/src/: error.rs  gitinfo.rs  lib.rs  types.rs
crates/oro-package-spec/src/parsers/: alias.rs  git.rs  mod.rs  npm.rs  package.rs  path.rs  util.rs
crates/oro-package-spec/tests/: dir.rs  git.rs  npm.rs
crates/oro-pretty-json/: Cargo.toml  README.md
crates/oro-pretty-json/src/: lib.rs
crates/oro-script/: Cargo.toml  README.md
crates/oro-script/src/: error.rs  lib.rs
syenite/: Cargo.toml
syenite/commands/cmd-ping/: Cargo.toml
syenite/commands/cmd-ping/src/: lib.rs
syenite/commands/cmd-prime/: Cargo.toml
syenite/commands/cmd-prime/src/: lib.rs
syenite/commands/cmd-restore/: Cargo.toml
syenite/commands/cmd-restore/src/: lib.rs
syenite/commands/cmd-shell/: Cargo.toml
syenite/commands/cmd-shell/src/: lib.rs
syenite/commands/cmd-view/: Cargo.toml
syenite/commands/cmd-view/src/: lib.rs
syenite/src/: lib.rs  main.rs
(+274 files in other folders)
