[package]
name = "orogene"
version = "0.2.2"
authors = ["Orogene Maintainers and Contributors"]
edition = "2021"
description = "`node_modules/` package manager and utility toolkit."
license = "Apache-2.0"
repository = "https://github.com/orogene/orogene"
homepage = "https://orogene.dev"
readme = "README.md"
build = "build.rs"
rust-version = "1.67.1"

[package.metadata.release]
tag = true

[dependencies]
# Workspace Deps
nassun = { version = "=0.2.2", path = "./crates/nassun" }
node-maintainer = { version = "=0.2.2", path = "./crates/node-maintainer" }
oro-client = { version = "=0.2.2", path = "./crates/oro-client" }
oro-common = { version = "=0.2.2", path = "./crates/oro-common" }
oro-config = { version = "=0.2.2", path = "./crates/oro-config" }

# Regular deps
async-std = { workspace = true, features = ["attributes", "tokio1", "unstable"] }
async-trait = { workspace = true }
chrono = { workspace = true }
chrono-humanize = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
humansize = { workspace = true }
directories = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
term_grid = { workspace = true }
term_size = { workspace = true }
tracing = { workspace = true}
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }

[workspace]
members = [
    ".",
    "crates/*",
]

[workspace.dependencies]
async-compression = "0.3.5"
async-process = "1.0.1"
async-std = "1.12.0"
async-tar-wasm = "0.4.2-wasm.1"
async-trait = "0.1.64"
bincode = "1.3.1"
bytecount = "0.6.0"
cacache = "11.1.0"
chrono = "0.4.23"
chrono-humanize = "0.0.11"
clap = "4.1.4"
colored = "2.0.0"
config = "0.13.2"
console_error_panic_hook = "0.1.7"
darling = "0.10.2"
dashmap = "4.0.0-rc6"
derive_builder = "0.11.2"
directories = "4.0.1"
flate2 = "1.0.25"
futures = "0.3.26"
indicatif = "0.17.3"
http-cache-reqwest = "0.6.0"
humansize = "1.1.0"
js-sys = "0.3.61"
kdl = "5.0.0-alpha.0"
maplit = "1.0.2"
miette = "5.5.0"
node-semver = "2.1.0"
nom = "7.1.3"
percent-encoding = "2.1.0"
pretty_assertions = "1.3.0"
proc-macro2 = "1.0.18"
quote = "1.0.7"
reflink = "0.1.3"
reqwest = "0.11.14"
reqwest-middleware = "0.2.0"
serde = "1.0.152"
serde_json = "1.0.93"
serde-wasm-bindgen = "0.4.5"
ssri = "8.0.0"
syn = "1.0.33"
tar = "0.4.38"
tempfile = "3.3.0"
term_grid = "0.1.7"
term_size = "0.3.2"
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wasm-streams = "0.2.3"
which = "4.0.2"
wiremock = "0.5.17"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.3-prerelease12"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "stable"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]

[build-dependencies]
embed-resource = "1.3.3"

[[bin]]
name = "oro"
path = "src/main.rs"

[profile.release]
lto = "thin"
opt-level = 3
strip = true
debug = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
