[package]
name = "orogene"
version = "0.3.19"
authors = ["Orogene Maintainers and Contributors"]
edition = "2021"
description = "`node_modules/` package manager and utility toolkit."
license = "Apache-2.0"
repository = "https://github.com/orogene/orogene"
homepage = "https://orogene.dev"
readme = "README.md"
build = "build.rs"
rust-version = "1.67.1"

[package.metadata.release]
tag = true

[dependencies]
# Workspace Deps
nassun = { version = "=0.3.19", path = "./crates/nassun" }
node-maintainer = { version = "=0.3.19", path = "./crates/node-maintainer" }
oro-client = { version = "=0.3.19", path = "./crates/oro-client" }
oro-common = { version = "=0.3.19", path = "./crates/oro-common" }
oro-config = { version = "=0.3.19", path = "./crates/oro-config" }

# Regular deps
async-std = { workspace = true, features = ["attributes", "tokio1", "unstable"] }
async-trait = { workspace = true }
chrono = { workspace = true }
chrono-humanize = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
humansize = { workspace = true }
directories = { workspace = true }
indicatif = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
rand = { workspace = true, default_features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-unicode = { workspace = true }
term_grid = { workspace = true }
term_size = { workspace = true }
tracing = { workspace = true}
tracing-appender = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }

[workspace]
members = [
    ".",
    "crates/*",
]

[workspace.dependencies]
async-compression = "0.3.5"
async-process = "1.0.1"
async-std = "1.12.0"
async-trait = "0.1.64"
backon = "0.4.0"
bincode = "1.3.1"
bytecount = "0.6.0"
cacache = "11.5.2"
chrono = "0.4.23"
chrono-humanize = "0.0.11"
clap = "4.1.4"
colored = "2.0.0"
config = "0.13.2"
console_error_panic_hook = "0.1.7"
darling = "0.10.2"
dashmap = "4.0.0-rc6"
derive_builder = "0.11.2"
directories = "4.0.1"
dunce = "1.0.3"
flate2 = "1.0.25"
futures = "0.3.26"
indicatif = "0.17.3"
io_tee = "0.1.1"
http-cache-reqwest = "0.6.0"
humansize = "1.1.0"
insta = "1.28.0"
js-sys = "0.3.61"
junction = "1.0.0"
kdl = "5.0.0-alpha.1"
maplit = "1.0.2"
miette = "5.7.0"
mockito = "1.0.0"
node-semver = "2.1.0"
nom = "7.1.3"
once_cell = "1.17.1"
pathdiff = "0.2.1"
percent-encoding = "2.1.0"
poloto = "17.1.0"
pretty_assertions = "1.3.0"
proc-macro2 = "1.0.18"
quote = "1.0.7"
rand = "0.8.5"
reflink = "0.1.3"
regex = "1.7.2"
reqwest = "0.11.14"
reqwest-middleware = "0.2.0"
resvg = "0.29.0"
serde = "1.0.152"
serde_json = "1.0.93"
serde-wasm-bindgen = "0.4.5"
ssri = "8.1.0"
supports-unicode = "2.0.0"
syn = "1.0.33"
tar = "0.4.38"
tempfile = "3.3.0"
term_grid = "0.1.7"
term_size = "0.3.2"
test-case = "3.0.0"
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-indicatif = "0.3.0"
tracing-subscriber = "0.3.16"
tsify = "0.4.3"
url = "2.3.1"
walkdir = "2.3.2"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wasm-streams = "0.2.3"
which = "4.0.2"
wiremock = "0.5.17"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.4"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]


[build-dependencies]
embed-resource = "1.3.3"

[[bin]]
name = "oro"
path = "src/main.rs"

[profile.release]
lto = "thin"
opt-level = 3
strip = true
debug = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[dev-dependencies]
backon = { workspace = true }
insta = { workspace = true, features = ["yaml"] }
poloto = { workspace = true }
resvg = { workspace = true }
tempfile = { workspace = true }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
