[package]
name = "syenite"
version = "0.1.0"
authors = ["Orogene Collaborative Members", "Orogene Public Contributors"]
edition = "2018"
description = "wip"
license-file = "LICENSE.md"
repository = "https://github.com/orogene/orogene"
homepage = "https://github.com/orogene/orogene"
readme = "README.md"
build = "build.rs"

[dependencies]
# Commands
cmd-ping = { path = "./commands/cmd-ping" }
cmd-restore = { path = "./commands/cmd-restore" }
cmd-view = { path = "./commands/cmd-view" }
cmd-shell = { path = "./commands/cmd-shell" }

# Workspace Deps
oro-command = { path = "../crates/oro-command" }
oro-error-code = { path = "../crates/oro-error-code" }
oro-config = { path = "../crates/oro-config" }
oro-pkg-root = { path = "../crates/oro-pkg-root" }

# Regular deps
anyhow = "1.0.31"
async-std = { version = "1.6.2", features = ["attributes", "unstable"] }
async-trait = "0.1.36"
clap = { git = "https://github.com/zkat/clap" }
fern = "0.6.0"
log = "0.4.11"
smol = "0.1.18"
directories = "3.0.1"

[build-dependencies]
embed-resource = "1.3.3"

[[bin]]
name = "oro"
path = "src/main.rs"
