[package]
name = "antimony"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "oro-gui"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.9", features = [ "event" ] }
anyhow = "1.0.31"
async-std = { version = "1.6.2", features = [ "attributes", "unstable" ] }
orogene = { path = "../../" }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "oro-gui"
path = "src/main.rs"
