[package]
name = "antimony"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "oro-gui"
edition = "2018"
build = "src/build.rs"

[dependencies]
oro-config = { path = "../../crates/oro-config" }
oro-pkg-root = { path = "../../crates/oro-pkg-root" }
oro-gui-handler = { path = "../../crates/oro-gui-handler" }
oro-handle-ping = { path = "../handlers/oro-handle-ping" }
erased-serde = "0.3.12"
tauri = { version = "0.9", features = [ "event" ] }
anyhow = "1.0.31"
async-std = { version = "1.6.2", features = [ "attributes", "unstable" ] }
serde = "1.0.115"
serde_json = "1.0.57"
async-trait = "0.1.19"
typetag = "0.1.5"
directories = "3.0.1"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "oro-gui"
path = "src/main.rs"
