[package]
name = "cmd-ping"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"

[dependencies]
oro-client = { path = "../../crates/oro-client" }
oro-command = { path = "../../crates/oro-command" }
oro-config = { path = "../../crates/oro-config" }

async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
miette = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true }
