[package]
name = "cmd-prime"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"

[dependencies]
nassun = { path = "../../crates/nassun" }
node-maintainer = { path = "../../crates/node-maintainer" }
oro-classic-resolver = { path = "../../crates/oro-classic-resolver" }
oro-command = { path = "../../crates/oro-command" }
oro-config = { path = "../../crates/oro-config" }
oro-pkg-root = { path = "../../crates/oro-pkg-root" }

async-std = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
miette = { workspace = true }
url = { workspace = true }
