[package]
name = "cmd-restore"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rogga = { path = "../../crates/rogga" }
oro-command = { path = "../../crates/oro-command" }
oro-config = { path = "../../crates/oro-config" }
oro-diagnostics = { path = "../../crates/oro-diagnostics" }
oro-tree = { path = "../../crates/oro-tree" }

clap = { git = "https://github.com/zkat/clap" }
async-trait = "0.1.19"
serde_json = "1.0.42"
log = "0.4.11"
url = "2.1.1"
ssri = "6.0.0"
futures = "0.3.5"
async-std = "1.6.2"
