[package]
name = "cmd-shell"
version = "0.1.0"
authors = ["Felipe Sere <felipesere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oro-command = { path = "../../crates/oro-command" }
oro-config = { path = "../../crates/oro-config" }
oro-error-code = { path = "../../crates/oro-error-code" }
clap = { git = "https://github.com/zkat/clap" }

anyhow = "1.0.25"
async-trait = "0.1.19"
log = "0.4.11"
