[package]
name = "oro-cmd-view"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

[dependencies]
oro-command = { path = "../../crates/oro-command" }
oro-common = { path = "../../crates/oro-common" }
oro-config = { path = "../../crates/oro-config" }
oro-classic-resolver = { path = "../../crates/oro-classic-resolver" }
oro-manifest = { path = "../../crates/oro-manifest" }
sessapinae = { path = "../../crates/sessapinae" }

colored = "2.0.0"
term_grid = "0.1.7"
term_size = "0.3.2"
chrono = "0.4.13"
chrono-humanize = "0.0.11"
humansize = "1.1.0"
