[package]
name = "nassun"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"

[dependencies]
oro-common = { path = "../oro-common" }
oro-client = { path = "../oro-client" }
oro-package-spec = { path = "../oro-package-spec" }

async-compression = { version = "0.3.5", features = ["gzip", "futures-io"] }
async-std = { workspace = true, features = ["attributes", "unstable"] }
async-trait = { workspace = true }
bincode = "1.3.1"
chrono = { workspace = true, features = ["serde"] }
dashmap = "4.0.0-rc6"
futures = { workspace = true }
miette = { workspace = true }
node-semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ssri = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tar = { git = "https://github.com/zkat/async-tar", branch = "master" }
async-process = { version = "1.0.1" }
async-std = { workspace = true, features = ["attributes", "std"] }
mkdirp = { version = "1.0.0" }
tempfile = { workspace = true }
which = { version = "4.0.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-tar = { git = "https://github.com/zkat/async-tar", branch = "master", default-features = false }
js-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-streams = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

# Temporary workaround. See https://github.com/rustwasm/wasm-pack/issues/864
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
