[package]
name = "nassun"
version = "0.3.3"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"
description = "NPM package interface for resolving, fetching metadata, downloading, and extracting individual packages."
license = "Apache-2.0"
repository = "https://github.com/orogene/orogene"
homepage = "https://github.com/orogene/orogene"
readme = "README.md"

[dependencies]
oro-common = { version = "=0.3.3", path = "../oro-common" }
oro-client = { version = "=0.3.3", path = "../oro-client" }
oro-package-spec = { version = "=0.3.3", path = "../oro-package-spec" }

async-compression = { workspace = true, features = ["gzip", "futures-io"] }
async-std = { workspace = true, features = ["attributes", "unstable"] }
async-trait = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
miette = { workspace = true }
node-semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ssri = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tar-wasm = { workspace = true }
async-process = { workspace = true }
async-std = { workspace = true, features = ["attributes", "std"] }
backon = { workspace = true }
cacache = { workspace = true }
flate2 = { workspace = true }
io_tee = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-tar-wasm = { workspace = true, default-features = false }
js-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-streams = { workspace = true }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# Temporary workaround. See https://github.com/rustwasm/wasm-pack/issues/864
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
