[package]
name = "nassun"
version = "0.3.33"
description = "NPM package interface for resolving, fetching metadata, downloading, and extracting individual packages."
readme = "README.md"
license = "Apache-2.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
oro-common = { version = "=0.3.33", path = "../oro-common" }
oro-client = { version = "=0.3.33", path = "../oro-client" }
oro-package-spec = { version = "=0.3.33", path = "../oro-package-spec" }

async-compression = { workspace = true, features = ["gzip", "futures-io"] }
async-std = { workspace = true, features = [
    "attributes",
    "unstable",
    "tokio1",
] }
async-trait = { workspace = true }
bincode = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
miette = { workspace = true }
node-semver = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ssri = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tsify = { workspace = true, default-features = false, features = ["js"] }
url = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
test-case = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tar-wasm = "0.4.2-wasm.1"
async-process = { workspace = true }
async-std = { workspace = true, features = ["attributes", "std"] }
backon = { workspace = true }
cacache = { workspace = true }
flate2 = { workspace = true }
io_tee = { workspace = true }
rkyv = { workspace = true, features = ["validation"] }
tar = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# NOTE: This async-tar-wasm version can't be configured at the workspace
#       level, because otherwise the conditional features don't work.
async-tar-wasm = { version = "0.4.2-wasm.1", default-features = false }
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-streams = { workspace = true }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# Temporary workaround. See https://github.com/rustwasm/wasm-pack/issues/864
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
