[package]
name = "node-maintainer"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"

[dependencies]
nassun = { path = "../nassun" }
oro-common = { path = "../oro-common" }
oro-package-spec = { path = "../oro-package-spec" }

futures = { workspace = true }
kdl = { workspace = true }
miette = { workspace = true }
node-semver = { workspace = true }
petgraph = { version = "0.6.2", default-features = false, features = ["stable_graph"] }
serde = { workspace = true }
serde_json = { workspace = true }
ssri = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"]}
tracing = { workspace = true }
unicase = "2.6.0"
url = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[dev-dependencies]
maplit = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
pretty_assertions = { workspace = true }
wiremock = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

# Temporary workaround. See https://github.com/rustwasm/wasm-pack/issues/864
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
