[package]
name = "node-maintainer"
version = "0.3.34"
description = "NPM dependency tree resolver for Orogene."
readme = "README.md"
license = "Apache-2.0"

authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
nassun = { version = "=0.3.34", path = "../nassun" }
oro-common = { version = "=0.3.34", path = "../oro-common" }
oro-package-spec = { version = "=0.3.34", path = "../oro-package-spec" }

async-std = { workspace = true }
colored = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
kdl = { workspace = true }
miette = { workspace = true }
node-semver = { workspace = true }
petgraph = { workspace = true, default-features = false, features = ["stable_graph"] }
serde = { workspace = true }
serde_json = { workspace = true }
ssri = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
unicase = { workspace = true }
url = { workspace = true }

[target.'cfg(windows)'.dependencies]
junction = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
oro-script = { version = "=0.3.34", path = "../oro-script" }
oro-shim-bin = { version = "=0.3.34", path = "../oro-shim-bin" }

reflink-copy = { workspace = true }
indicatif = { workspace = true }
pathdiff = { workspace = true }
tempfile = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
tsify = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[dev-dependencies]
async-std = { workspace = true, features = ["attributes", "tokio1"] }
insta = { workspace = true }
maplit = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
pretty_assertions = { workspace = true }
wiremock = { workspace = true }

[lib]
path = "./src/lib.rs"
crate-type = ["cdylib", "rlib"]

# Temporary workaround. See https://github.com/rustwasm/wasm-pack/issues/864
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
