[package]
name = "obelisk"
version = "0.1.0"
authors = ["Felipe Sere <felipesere@gmail.com>", "Kirill Vasiltsov <interalia.dev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ci_info = "0.11.0"

[build-dependencies]
cc = "1.0"
ci_info = "0.11.0"

[[bin]]
name = "obelisk"
path = "src/bin.rs"

