[package]
name = "oro-classic-resolver"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oro-common = { path = "../oro-common" }
oro-package-spec = { path = "../oro-package-spec" }
sessapinae = { path = "../sessapinae" }
async-trait = "0.1.52"
