[package]
name = "oro-classic-resolver"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oro-diagnostics = { path = "../oro-diagnostics" }
oro-package-spec = { path = "../oro-package-spec" }
rogga = { path = "../rogga" }

thiserror = "1.0.20"
async-trait = "0.1.36"
node-semver = "2.1.0"
