[package]
name = "oro-classic-resolver"
version = "0.1.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nassun = { path = "../nassun" }
oro-package-spec = { path = "../oro-package-spec" }

async-trait = { workspace = true }
miette = { workspace = true }
node-semver = { workspace = true }
thiserror = { workspace = true }
